Fix expandtab leaving whitespace after inserting new line above using 'O'
Based on (but not identical to) a fix by Konstantin Lepa:
http://vim.wikia.com/wiki/Script:231

Also see:
https://stackoverflow.com/questions/18750105/vim-expandtab-leaves-leading-whitespace

--- a/README
+++ b/README
@@ -2,6 +2,7 @@ This is a FORK of https://github.com/vim-scripts/Smart-Tabs
 
 Changes:
 
+- Add fix for 'O' leaving trailing whitespace with expandtab on
 - Merge b:ctab_lastalign fix from @skroll
 - Merge increase supported line size from @skroll
 - Merge fix for ts==0 from @nilium
